--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,8 @@
   --main-grey-color: #757575;
   --main-black-color: #212121;
   --gap-card-set: 30px;
+  --duration: 250ms;
+  --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 h1,
@@ -81,7 +83,7 @@ body {
   height: 44px;
   background-color: #ffffff;
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--duration) var(--timing-function);
 }
 
 .soc-networks-link:hover,
@@ -93,7 +95,7 @@ body {
   width: 20px;
   height: 20px;
   fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--duration) var(--timing-function);
 }
 
 .soc-networks-link:hover .soc-networks-icon,
@@ -134,8 +136,6 @@ body {
 }
 .menu {
   display: flex;
-  padding-top: 32px;
-  padding-bottom: 32px;
 }
 
 .menu-item:not(:last-child) {
@@ -148,7 +148,23 @@ body {
   line-height: 1.14;
   letter-spacing: 0.02em;
   color: var(--main-black-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  display: block;
+  padding-top: 32px;
+  padding-bottom: 32px;
+  transition: color var(--duration) var(--timing-function);
+}
+
+.menu-link.current::after {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  display: block;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
 }
 
 .menu-link:hover,
@@ -173,7 +189,7 @@ body {
 .header-contact-icon {
   fill: var(--main-grey-color);
   margin-right: 10px;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--duration) var(--timing-function);
 }
 
 .envelope {
@@ -196,7 +212,7 @@ body {
   line-height: 1.4;
   letter-spacing: 0.02em;
   color: var(--main-grey-color);
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--duration) var(--timing-function);
 }
 
 .list-contact-link:hover,
@@ -260,7 +276,7 @@ body {
   cursor: pointer;
   border: #2196f3;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--duration) var(--timing-function);
 }
 
 .modal-btn:hover,
@@ -271,6 +287,10 @@ body {
 /*=================END HERO=================*/
 
 /*=================ADVANTAGE=================*/
+
+.advantage-section {
+  padding-bottom: 0;
+}
 
 .visually-hidden {
   position: absolute;
@@ -290,7 +310,7 @@ body {
 
 .advantage-list-item {
   width: 270px;
-  height: 101px;
+  /*height: 101px;*/
 }
 .advantage-list-item:not(:last-child) {
   margin-right: 30px;
@@ -335,6 +355,35 @@ body {
 
 .doing-list-item {
   margin-right: var(--gap-card-set);
+}
+
+.doing-list-image-wrapper {
+  position: relative;
+}
+
+.overlay-wrapper {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 70px;
+  background-color: rgba(47, 48, 58, 0.8);
+}
+
+.overlay-doing {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  padding-top: 27px;
+  padding-bottom: 27px;
+  font-family: var(--main-font);
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 16px;
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: #ffffff;
 }
 
 /*=================END DOING=================*/
@@ -414,7 +463,7 @@ body {
   width: 106px;
   height: 60px;
   fill: #afb1b8;
-  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: fill var(--duration) var(--timing-function);
 }
 .customers-list-link:hover,
 .customers-list-link:focus {
@@ -514,7 +563,7 @@ body {
   height: 44px;
   background: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color var(--duration) var(--timing-function);
 }
 
 .appeal-list-link:hover,
@@ -559,14 +608,17 @@ body {
   background: #f5f4fa;
   border-radius: 4px;
   border: #757575;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: color var(--duration) var(--timing-function),
+    background-color var(--duration) var(--timing-function);
 }
 
 .filter-button:hover,
 .filter-button:focus {
   background-color: var(--accent-color);
   color: #ffffff;
+  box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+    0px 2px 2px rgba(0, 0, 0, 0.12);
+  border-radius: 4px;
 }
 
 .filter-button:active {
@@ -588,7 +640,7 @@ body {
   background: #ffffff;
   border: 1px solid #eeeeee;
   box-sizing: border-box;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: box-shadow var(--duration) var(--timing-function);
 }
 
 .list-portfolio-item:hover,
@@ -601,6 +653,11 @@ body {
 .list-portfolio-img-wrapper {
   position: relative;
   overflow: hidden;
+}
+
+.list-portfolio-image {
+  width: 370px;
+  height: 294px;
 }
 
 .overlay-portfolio {
@@ -617,12 +674,16 @@ body {
   background-color: rgba(33, 150, 243, 0.9);
   /*overflow: auto;*/
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform var(--duration) var(--timing-function);
 }
 
 .list-potfolio-link-wrapper:hover .overlay-portfolio,
 .list-potfolio-link-wrapper:focus .overlay-portfolio {
   transform: translateY(0%);
+}
+
+.list-portfolio-content {
+  padding: 20px 24px;
 }
 
 .list-portfolio-title {
@@ -632,10 +693,6 @@ body {
   letter-spacing: 0.06em;
   color: var(--main-black-color);
   margin-bottom: 4px;
-}
-
-.list-portfolio-content {
-  padding: 20px 24px;
 }
 
 .description-portfolio {
@@ -656,8 +713,8 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
   z-index: 100;
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: opacity var(--duration) var(--timing-function),
+    visibility var(--duration) var(--timing-function);
 }
 
 .is-hidden {
